Fix burger navbar overlap

--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -3,6 +3,11 @@ body {
   overflow-x: hidden;
 }
 
+.main {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 .navbar {
   width: 100%;
   display: flex;
@@ -12,15 +17,15 @@ body {
   &__list {
     position: absolute;
     top: 0;
-    right: -100%;
-    width: 100%;
+    left: 0;
+    width: 100vw;
     height: 100%;
     background: hsla(0, 0, 0, 0.7);
     font-size: 1.2rem;
     padding: 3rem 0;
-    transition: right 0.3s linear;
-    display: flex;
-    flex-direction: column;
+    transform: translateX(-100vw);
+    transition: transform 0.3s linear;
+    // overflow: hidden;
   }
 
   &__list * + * {
@@ -68,5 +73,5 @@ body {
 }
 
 .show-menu {
-  right: 0;
+  transform: translateX(0);
 }
